--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -50,7 +50,7 @@
 
 
 {{#if loggedIn}}
-    <script src="/javascript/logout.js"></script>
+    <script src="/public/js/logout.js"></script>
 {{/if}}
 
 
