add new content in project

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -42,6 +42,6 @@
 
 
 {{#if loggedIn}}
-<script src="/javascript/add-post.js"></script>
-<script src="/javascript/search.js"></script>
+<script src="/js/add-post.js"></script>
+<script src="/js/search.js"></script>
 {{/if}}
