--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -50,12 +50,12 @@
 
 
 {{#if loggedIn}}
-    <script src="/public/js/logout.js"></script>
+    <script src="js/logout.js"></script>
 {{/if}}
 
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="/javascript/search.js"></script>
+<script src="/js/search.js"></script>
 </body>
 </html> 
