character-sheet with associated js file, create character button on homepage-still trying to render image to it and add event listener

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,6 +44,14 @@ a, #logout, .username {
   
   }
 
+
+ .btn-default {
+
+  width: 100%;
+  height: 20px;
+  margin-top: 280px;
+ }
+
 /* CHARACTER CREATOR  */
 
 .character-creator select {
