--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,11 +3,7 @@
   <div class="row">
     <div class="col-12">
 {{#if loggedIn}}
-    <form class="new-post-form">
-        <input type="text" class="form-control bg-dark text-white" id="post-input" name="post-text" placeholder="What's on your mind?" />    
-        <button type="submit" class="btn btn-warning" id="btn-post">Post</button>
-
-    </form>
+  
 {{/if}}
     </div>
   </div>
@@ -19,7 +15,9 @@
       <div id="header-welcome-container">
         <h2 class="text-warning" id="header-welcome">Welcome</h2>
       </div>
-      
+     <button class="btn btn-default">
+     <img src="./assets/button2off.jpg" width="20" /> CREATE NEW CHARACTER
+</button>
     </div>
   </div>
 </div>
