character creator button and character sheet button added to homepage, image in images file to work on for eventual button design

--- a/views/character-creator.handlebars
+++ b/views/character-creator.handlebars
@@ -77,4 +77,4 @@
     </form>
 </div>
 
-<script src="/javascript/character-creator.js"></script>
+<script src="./public/js/character-creator.js"></script>
