--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,20 +44,18 @@ a, #logout, .username {
   
   }
 
+span button{
+  margin-top: 200px;
+}
 
- .btn-default {
-
-  width: 100%;
-  height: 20px;
-  margin-top: 280px;
- }
+ 
 
 /* CHARACTER CREATOR  */
 
 .character-creator select {
   width: 100%;
   margin-bottom: 35px;
-  border-radius: 10px;
+  border-radius: 10;
 }
 
 .character-creator input {
