--- a/views/character-creator.handlebars
+++ b/views/character-creator.handlebars
@@ -77,4 +77,4 @@
     </form>
 </div>
 
-<script src="./public/js/character-creator.js"></script>
+<script src="./js/character-creator.js"></script>
