--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,8 +13,8 @@
 </style>
 </head>
 
-<body style="background-color: #343a40">
-<nav class="navbar navbar-expand-lg navbar-light bg-dark">
+<body>
+<div class="navbar navbar-expand-lg navbar-light ">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -42,7 +42,7 @@
           <button type="submit" class="btn btn-outline-warning my-2 my-sm-0" id="btn-post">Search</button>
     </form>
   </div>
-</nav>
+</div>
 
 <main>
     {{{ body }}}
