cropped wood photo so logo doesnt show when responsive

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  background-image: url('/images/woodtexture.jpg');
+  background-image: url('/images/woodtexture1.jpg');
 }
 
 .navbar-brand {
