user signup and login test passed

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -21,12 +21,10 @@
     </div>
   </div>
 
-
-
   <div>
     <button type="submit" class="btn btn-warning" id="btn-signup">Sign-up</button>
   </div>
 
 </form>
 
-<script src="/js/login.js"></script>
+<script src="/js/signup.js"></script>
