Added Wisdom ability score box to character creator. Fixed CSS issues

--- a/views/character-sheet.handlebars
+++ b/views/character-sheet.handlebars
@@ -79,11 +79,20 @@
             </li>
             <li>
               <div class="score">
-                <label for="Intelligencescore">INT</styl>
+                <label for="Intelligencescore">INT</label>
                 <input type='text' value="{{int}}" name="Intelligencescore" placeholder="10" class="stat"/>
               </div>
               <div class="modifier">
                 <input type='text' value="{{int-mod}}" name="Intelligencemod" placeholder="+0" class="statmod"/>
+              </div>
+            </li>
+            <li>
+              <div class="score">
+                <label for="Wisdomscore">WIS</label>
+                <input type='text' value="{{wis}}" name="Wisdomscore" placeholder="10" class="stat"/>
+              </div>
+              <div class="modifier">
+                <input type='text' value="{{wis-mod}}" name="Wisdommod" placeholder="+0" class="statmod"/>
               </div>
             </li>
             <li>
