--- a/views/character-creator.handlebars
+++ b/views/character-creator.handlebars
@@ -21,6 +21,15 @@
             </select>
         </div>
 
+         <!-- background selection -->
+        <div>
+            <label for="char-background">Background: </label>
+            <select id="char-background" name="char-background" required>
+                <option hidden></option>
+                <option value="acolyte">acolyte</option>
+            </select>
+        </div>
+
         <!-- Class selection -->
         <div>
             <label for="char-class">Classes: </label>
@@ -40,6 +49,8 @@
                 <option value="wizard">Wizard</option>
         </div>
         </select>
+
+        
 
         <!-- Name input-->
         <div>
