--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,26 +21,13 @@
   <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
     <a class="navbar-brand text-warning" href="/"><h1>DnD Character Creator <i class="fa-brands fa-d-and-d"></i></h1></a>
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-    {{#if loggedIn}}
-      <li class="nav-item">
-        <a class="nav-link text-white" href="/profile">My Profile</a>
-      </li>
-       <li class="nav-item">
-       <button id="logout" class="nav-link text-white btn btn-link">Logout</button>
-      </li>
-    {{else}}
-      <li class="nav-item">
-        <a class="nav-link text-white" href="/login">Login</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link text-white" href="/signup">Sign-up</a>
-      </li>
-    {{/if}}
-    </ul>
-    <form class="form-inline my-2 my-lg-0" id="search-form">
-          <input type="text" class="form-control mr-sm-2 bg-dark text-white" id="search-input" name="search-text" placeholder="Search" aria-label="Search">
-          <button type="submit" class="btn btn-outline-warning my-2 my-sm-0" id="btn-post">Search</button>
-    </form>
+    <nav>
+      {{#if logged_in}}
+    <button id="logout" class="btn-no-style">Logout</button>
+   {{/if}}
+    </nav>
+
+   
   </div>
 </div>
 
