--- a/views/partials/login.handlebars
+++ b/views/partials/login.handlebars
@@ -19,7 +19,8 @@
     <div class="nav-item">
         <a class="nav-link text-white" href="/signup">Sign-up</a>
        
-
+    </div>
+    <div></div>
     
   </div>
   </div>
