--- a/views/character-sheet.handlebars
+++ b/views/character-sheet.handlebars
@@ -473,3 +473,5 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="./js/character-sheet-template.js"></script>
+
+{{!-- //Delete this --}}
