--- a/views/character-creator.handlebars
+++ b/views/character-creator.handlebars
@@ -1,5 +1,33 @@
 
-
+<div class="navbar navbar-expand-lg navbar-light ">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+    <a class="navbar-brand text-warning" href="/"><h1>DnD Character Creator <i class="fa-brands fa-d-and-d"></i></h1></a>
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+    {{#if loggedIn}}
+      <li class="nav-item">
+        <a class="nav-link text-white" href="/">Home</a>
+      </li>
+       <li class="nav-item">
+        <a class="nav-link text-white" id="logout" href="/logout">Logout</a>
+      </li>
+    {{else}}
+      <li class="nav-item">
+        <a class="nav-link text-white" href="/login">Login</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-white" href="/signup">Sign-up</a>
+      </li>
+    {{/if}}
+    </ul>
+    <form class="form-inline my-2 my-lg-0" id="search-form">
+          <input type="text" class="form-control mr-sm-2 bg-dark text-white" id="search-input" name="search-text" placeholder="Search" aria-label="Search">
+          <button type="submit" class="btn btn-outline-warning my-2 my-sm-0" id="btn-post">Search</button>
+    </form>
+  </div>
+</div>
 <div class="character-creator">
     <form id="character-form">
         <h1>Character Creator</h1>
@@ -76,5 +104,7 @@
         </div>
     </form>
 </div>
-
+{{#if loggedIn}}
+<script src="./js/logout.js"></script>
+{{/if}}
 <script src="./js/character-creator.js"></script>
