--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,77 +1,36 @@
-<div class="navbar navbar-expand-lg navbar-light ">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-    <a class="navbar-brand text-warning" href="/"><h1>DnD Character Creator <i class="fa-brands fa-d-and-d"></i></h1></a>
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-    {{#if loggedIn}}
-       <li class="nav-item">
-        <a class="nav-link text-white" id="logout" href="/logout">Logout</a>
-      </li>
-    {{else}}
-      <li class="nav-item">
-        <a class="nav-link text-white" href="/login">Login</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link text-white" href="/signup">Sign-up</a>
-      </li>
-    {{/if}}
-    </ul>
-    <form class="form-inline my-2 my-lg-0" id="search-form">
-          <input type="text" class="form-control mr-sm-2 bg-dark text-white" id="search-input" name="search-text" placeholder="Search" aria-label="Search">
-          <button type="submit" class="btn btn-outline-warning my-2 my-sm-0" id="btn-post">Search</button>
-    </form>
-  </div>
-</div>
+
 <div class="container-title">
   <div class="row">
     <div class="col-12">
       <div id="header-welcome-container">
-        <h1 class="text-warning" id="header-welcome">Welcome</h1>
+        <h1 class="text-warning" id="header-welcome">WELCOME</h1>
         {{#if loggedIn}}
-          <span class="newcharbutton"> {{!-- if logged in to be added here evntually --}}
+          {{!-- <span class="newcharbutton"> 
             <button> <a href="/character-creator">Create New Character </a> </button>
-          </span>
-          <span class="newcharsheet">
-             <button> <a href="/character-sheet">New Character Sheet </a> </button>
-          </span>
+          </span> --}}
+          <a href="./character-creator">
+            <input type="image" src="./images/charbutton.png" name="create-character" class="charbtnSubmit" id="character-creator" href="/character-creator" /> </a>
+          <a href="./character-sheet">
+            <input type="image" src="./images/sheetbutton.png" name="sheet-character" class="sheetbtnSubmit" id="sheet-creator" href="/character-sheet"  /> </a>
+
+
+          {{!-- <span class="newcharsheet">
+            <button> <a href="/character-sheet">New Character Sheet </a> </button>
+          </span> --}}
+          
         {{else}}
-        <h2 class="text-white">Let's build your DnD character as fast as possible</h2>
+        {{!-- <h3 class="text-white">Ready to build your Dungeons and Dragons character? Please login or signup. After you create your new character, 
+          your information will print to your character sheet for you to save or edit. Roll well and good luck!
+        </h3> --}}
+
+        <img src="/images/welcomescreen.png" alt="">
         {{/if}}
        </div>
     </div>
   </div>
 </div>
-
-
-
-
-
-
-      {{!-- <button class="newchar">CREATE NEW CHARACTER
-             <img class="image" src= "./images/button2off.jpg" ></button> --}}      
-    
      
+    
+  
 
 
-
-<!-- to maybe use later -->
-{{!-- <ol class="character-list" style="height: 80vh; overflow-y: scroll"> --}}
-
-<!-- character array -->
-
-
-{{!-- {{#each characters as |characters|}}
-  <ul>
-      {{> character-info character }} 
-    </div>
-  </ul>
-{{/each}}
-</ol> --}}
-
-
-
-{{#if loggedIn}}
-<script src="./js/search.js"></script>
-{{/if}}
