--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,6 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 
+  <head>
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+  </head>
+<body>
+  <nav class="navbar navbar-expand-lg navbar-light ">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+    <a class="navbar-brand text-warning" href="/"><h1>DnD Character Creator <i class="fa-brands fa-d-and-d"></i></h1></a>
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+
+    {{#if loggedIn}}
+      <li class="nav-item">
+        <a class="nav-link text-white" href="/">Home</a>
+      </li>
+       <li class="nav-item">
+        <a class="nav-link text-white" id="logout" href="/logout">Logout</a>
+      </li>
+    {{else}}
+      <li class="nav-item">
+        <a class="nav-link text-white" href="/login">Login</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-white" href="/signup">Sign-up</a>
+      </li>
+    {{/if}}
+    </ul>
+    <form class="form-inline my-2 my-lg-0" id="search-form">
+          <input type="text" class="form-control mr-sm-2 bg-dark text-white" id="search-input" name="search-text" placeholder="Search" aria-label="Search">
+          <button type="submit" class="btn btn-outline-warning my-2 my-sm-0" id="btn-post">Search</button>
+    </form>
+  </div>
+  </nav>
+
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
