--- a/views/character-sheet.handlebars
+++ b/views/character-sheet.handlebars
@@ -17,72 +17,14 @@
     <section>
       <section class="attributes"> 
         {{!-- CHARACTER SCORES --}}
-<div class="scores">
-          <ul>
-            <li>
-              <div class="score">
-                <label for="Strengthscore">STR</label>
-                <input type='text' value="{{Character_Scores.[0].str}}"name="Strengthscore" placeholder="10" class="stat"/>
-              </div>
-              <div class="modifier">
-                <input type='text' value="{{ get_mod Character_Scores.[0].str}}" name="Strengthmod" placeholder="+0" class="statmod"/>
-              </div>
-            </li>
-            <li>
-              <div class="score">
-                <label for="Dexterityscore">DEX</label>
-                <input type='text' value="{{Character_Scores.[0].dex}}" name="Dexterityscore" placeholder="10" class="stat"/>
-              </div>
-              <div class="modifier">
-                <input type='text' value="{{get_mod Character_Scores.[0].dex}}" name="Dexteritymod" placeholder="+0" class="statmod"/>
-              </div>
-            </li>
-            <li>
-              <div class="score">
-                <label for="Constitutionscore">CON</label>
-                <input type='text' value="{{Character_Scores.[0].con}}" name="Constitutionscore" placeholder="10" class="stat"/>
-              </div>
-              <div class="modifier">
-                <input type='text' value="{{get_mod Character_Scores.[0].con}}" name="Constitutionmod" placeholder="+0" class="statmod"/>
-              </div>
-            </li>
-            <li>
-              <div class="score">
-                <label for="Intelligencescore">INT</label>
-                <input type='text' value="{{Character_Scores.[0].int}}" name="Intelligencescore" placeholder="10" class="stat"/>
-              </div>
-              <div class="modifier">
-                <input type='text' value="{{get_mod Character_Scores.[0].int}}" name="Intelligencemod" placeholder="+0" class="statmod"/>
-              </div>
-            </li>
-            <li>
-              <div class="score">
-                <label for="Wisdomscore">WIS</label>
-                <input type='text' value="{{Character_Scores.[0].wis}}" name="Wisdomscore" placeholder="10" class="stat"/>
-              </div>
-              <div class="modifier">
-                <input type='text' value="{{get_mod Character_Scores.[0].wis}}" name="Wisdommod" placeholder="+0" class="statmod"/>
-              </div>
-            </li>
-            <li>
-              <div class="score">
-                <label for="Charismascore">CHA</label>
-                <input type='text' value="{{Character_Scores.[0].cha}}" name="Charismascore" placeholder="10" class="stat"/>
-              </div>
-              <div class="modifier">
-                <input type='text' value="{{get_mod Character_Scores.[0].cha}} "name="Charismamod" placeholder="+0" class="statmod"/>
-              </div>
-            </li>
-          </ul>
-        </div>
+{{> charsheet-scores}}
 
-        
         <div class="attr-applications">
            <div class="inspiration box">
             <div class="label-container">
               <label for="inspiration">Inspiration</label>
             </div>
-            <input type='checkbox' value="{{inspiration}}" name="inspiration" placeholder="+2"/>
+            <input type='checkbox' checked value="{{inspiration}}" name="inspiration"/>
           </div>
           
           {{!-- PROF BONUSES --}}
@@ -90,154 +32,18 @@
             <div class="label-container">
               <label for="proficiencybonus">Proficiency Bonus</label>
             </div>
-            <input type='text' value="{{prof-bonus}}" name="proficiencybonus" placeholder="+2" />
+            <input type='text' value="{{sign prof_bonus}}" name="proficiencybonus" placeholder="+2" />
           </div>
 
+          {{> charsheet-savthrows}}
           
-          <div class="saves list-section box">
-            <ul>
-              <li>
-                <label for="Strength-save">Strength</label>
-                <input type='text' value="{{str-save}}" name="Strength-save" placeholder="+0" />
-                <input type="checkbox" value="{{str-save-prof}} name="Strength-save-prof" "/>
-              </li>
-              <li>
-                <label for="Dexterity-save">Dexterity</label>
-                <input type="text" value="{{dex-save}}"" name="Dexterity-save" placeholder="+0" " />
-                <input type='checkbox' value="{{dex-save-prof}}" name="Dexterity-save-prof" />
-              </li>
-              <li>
-                <label for="Constitution-save">Constitution</label>
-                <input type='text' value="{{con-save}}" name="Constitution-save" placeholder="+0" />
-                <input type='checkbox' value="{{con-save-prof}}" name="Constitution-save-prof" />
-              </li>
-              <li>
-                <label for="Wisdom-save">Wisdom</label>
-                <input type='text' value="{{wis-save}}" name="Wisdom-save" placeholder="+0" />
-                <input type='checkbox' value="{{wis-save-prof}}"name="Wisdom-save-prof" />
-              </li>
-              <li>
-                <label for="Intelligence-save">Intelligence</label>
-                <input type='text' value="{{int-save}}" name="Intelligence-save" placeholder="+0" />
-                <input type='checkbox' value="{{int-save-prof}}" name="Intelligence-save-prof" />
-              </li>
-              <li>
-                <label for="Charisma-save">Charisma</label>
-                <input type='text' value="{{cha-save}}" name="Charisma-save" placeholder="+0" />
-                <input type='checkbox' value="{{con-save}}" name="Charisma-save-prof" />
-              </li>
-            </ul>
-            <div class="label">
-              Saving Throws
-            </div>
-          </div>
-
-          
-          <div class="skills list-section box">
-            <ul>
-              <li>
-                <label for="Acrobatics">Acrobatics <span class="skill">(Dex)</span></label>
-                <input type='text' value="{{acrobatics}}" name="Acrobatics" placeholder="+0" />
-                <input type='checkbox' value="{{acrobatics-prof}}" name="Acrobatics-prof" />
-              </li>
-              <li>
-                <label for="Animal Handling">Animal Handling <span class="skill">(Wis)</span></label>
-                <input type='text' value="{{animal-handling}}" name="Animal Handling" placeholder="+0" />
-                <input type='checkbox' value="{{animal-handling-porf}}" name="Animal Handling-prof" />
-              </li>
-              <li>
-                <label for="Arcana">Arcana <span class="skill">(Int)</span></label>
-                <input type='text' value="{{arcana}}" name="Arcana" placeholder="+0" />
-                <input type='checkbox' value="{{arcana-prof}}"  name="Arcana-prof" />
-              </li>
-              <li>
-                <label for="Athletics">Athletics <span class="skill">(Str)</span></label>
-                <input type='text' value="{{athletics}}" name="Athletics" placeholder="+0" />
-                <input type="checkbox" value="{{athletics-prof}}" name="Athletics-prof" />
-              </li>
-              <li>
-                <label for="Deception">Deception <span class="skill">(Cha)</span></label>
-                <input type='text' value="{{deception}}" name="Deception" placeholder="+0" />
-                <input type="checkbox"  value="{{deception-prof}}" name="Deception-prof" />
-              </li>
-              <li>
-                <label for="History">History <span class="skill">(Int)</span></label>
-                <input type='text' value="{{history}}" name="History" placeholder="+0" />
-                <input type="checkbox" value="{{history-prof}}" name="History-prof" />
-              </li>
-              <li>
-                <label for="Insight">Insight <span class="skill">(Wis)</span></label>
-                <input type='text' value="{{insight}}"  name="Insight" placeholder="+0" />
-                <input type="checkbox" value="{{insight-prof}}" name="Insight-prof"  />
-              </li>
-              <li>
-                <label for="Intimidation">Intimidation <span class="skill">(Cha)</span></label>
-                <input type='text' value="{{insight}}" name="Intimidation" placeholder="+0" />
-                <input type='checkbox' value="{{insight}}" name="Intimidation-prof" />
-              </li>
-              <li>
-                <label for="Investigation">Investigation <span class="skill">(Int)</span></label>
-                <input type='text' value="{{investigation}}" name="Investigation" placeholder="+0" />
-                <input type="checkbox"  value="{{investigation-prof}}" name="Investigation-prof"/>
-              </li>
-              <li>
-                <label for="Medicine">Medicine <span class="skill">(Wis)</span></label>
-                <input  type="text" value="{{medicine}}" name="Medicine" placeholder="+0" />
-                <input  type="checkbox" value="{{medicine-prof}}" name="Medicine-prof" />
-              </li>
-              <li>
-                <label for="Nature">Nature <span class="skill">(Int)</span></label>
-                <input type='text' value="{{nature}}" name="Nature" placeholder="+0" />
-                <input  type="checkbox" value="{{nature-prof}}" name="Nature-prof" />
-              </li>
-              <li>
-                <label for="Perception">Perception <span class="skill">(Wis)</span></label>
-                <input type='text' value="{{perception}}" name="Perception" placeholder="+0" />
-                <input type="checkbox" value="{{perception-prof}}"  name="Perception-prof" />
-              </li>
-              <li>
-                <label for="Performance">Performance <span class="skill">(Cha)</span></label>
-                <input type="text" value="{{performance}}" name="Performance" placeholder="+0"/>
-                <input type="checkbox" value="{{performance-prof}}" name="Performance-prof" />
-              </li>
-              <li>
-                <label for="Persuasion">Persuasion <span class="skill">(Cha)</span></label>
-                 <input type="text" value="{{persuasion}}" name="Persuasion" placeholder="+0" />
-                <input type="checkbox" value="{{persuasion-prof}}" name="Persuasion-prof" />
-              </li>
-              <li>
-                <label for="Religion">Religion <span class="skill">(Int)</span></label>
-                <input type="text" value="{{religion}}" name="Religion" placeholder="+0" />
-                <input type="checkbox" value="{{religion-prof}}" name="Religion-prof" />
-              </li>
-              <li>
-                <label for="Sleight of Hand">Sleight of Hand <span class="skill">(Dex)</span></label>
-                <input type="text" value="{{sleightofhand}}" name="Sleight of Hand" placeholder="+0" />
-                <input type="checkbox" value="{{sleightofhand-prof}}" name="Sleight of Hand-prof" />
-              </li>
-              <li>
-                <label for="Stealth">Stealth <span class="skill">(Dex)</span></label>
-                <input type="text" value="{{stealth}}" name="Stealth" placeholder="+0"/>
-                <input type="checkbox" value="{{stealth-prof}}" name="Stealth-prof" />
-              </li>
-              <li>
-                <label for="Survival">Survival <span class="skill">(Wis)</span></label>
-                <input type="text" value="{{survival}}" name="Survival" placeholder="+0" />
-                <input type="checkbox" value="{{survival-prof}}" name="Survival-prof" />
-              </li>
-            </ul>
-            <div class="label">
-              Skills
-            </div>
-          </div>
-        </div>
-      </section>
+          {{> charsheet-skills}}
 
       <div class="passive-perception box">
         <div class="label-container">
           <label for="passiveperception">Passive Wisdom (Perception)</label>
         </div>
-        <input type="text" value="{{passiveperception}}" name="passiveperception" placeholder="10" />
+        <input type="text" value="{{passive (get_mod Character_Scores.[0].wis)}}" name="passiveperception" placeholder="10" />
       </div>
       <div class="otherprofs box textblock">
         <label for="otherprofs">Other Proficiencies and Languages</label>
@@ -258,7 +64,7 @@
         <div class="initiative">
           <div>
             <label for="initiative">Initiative</label>
-            <input type="text" value="{{initiative}}" name="initiative" placeholder="+0" />
+            <input type="text" value="{{get_mod Character_Scores.[0].dex}}" name="initiative" placeholder="+0" />
           </div>
         </div>
         <div class="speed">
