responsive toggle, deleted signup login

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,10 +23,11 @@ padding-right:2%;
   padding-left: 2%;
   }
 
+  .navbar-toggler{
+    background-color:#ffbb33 !important;
+  }
 
-/* span  {
-  background-image: url('/images/button2off.jpg');
-} */
+ 
 
 .navbar-brand {
 
