--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -23,7 +23,7 @@
           your information will print to your character sheet for you to save or edit. Roll well and good luck!
         </h3> --}}
 
-        <img src="/images/welcomescreen.png" alt="">
+        <img src="/images/welcomescreen.png" alt="" id="welcome-screen-words">
         {{/if}}
        </div>
     </div>
