src character creater .js

--- a/views/character-sheet.handlebars
+++ b/views/character-sheet.handlebars
@@ -490,4 +490,4 @@
 {{!-- Ability to edit char sheet manually --}}
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="./js/character-sheet-template.js"></script>
+<script src="../public/js/character-creator.js"></script>
