--- a/public/css/style.css
+++ b/public/css/style.css
@@ -67,10 +67,7 @@ a, #logout, .username {
   
   }
 
-/* create char and char sheet buttons on homepage*/
-span button{
-  margin-top: 200px;
-}
+
 
 
 
@@ -110,3 +107,21 @@ display: inline-block;
 
 /* profile page style */
 
+/* MEDIA QUERIES*/
+
+@media (max-width: 600px) {
+  .charbtnSubmit {
+    max-width:50%;
+    max-height:50%;
+  }
+  .sheetbtnSubmit {
+    max-width: 50%;
+    max-height:50%;
+    padding-left:0;
+  }
+
+}
+
+ 
+ 
+  
