--- a/views/partials/charsheet-savthrows.handlebars
+++ b/views/partials/charsheet-savthrows.handlebars
@@ -55,6 +55,6 @@
               </li>
             </ul>
             <div class="label">
-              Saving Throws
+              Saving Throwss
             </div>
           </div>
