--- a/views/character-sheet.handlebars
+++ b/views/character-sheet.handlebars
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="./character-sheet.css">
+<link rel="stylesheet" href="../css/character-sheet.css">
 
 <style>
   .charsheet{
@@ -45,17 +45,30 @@
         </div>
         <input type="text" value="{{passive (get_mod Character_Scores.[0].wis)}}" name="passiveperception" placeholder="10" />
       </div>
+
       <div class="otherprofs box textblock">
         <label for="otherprofs">Other Proficiencies and Languages</label>
         <textarea name="otherprofs">
-          {{!-- {{#each (stringify Character_Prof_Langs.[0].tools) as |prof|}} 
-         Tools: {{prof}}
-         Armor: {{prof.armor}}
-         Weapon: {{prof.weapon}}
-         Languages:{{prof.Languages}}
-         {{/each}}  --}}
-         {{tostring (stringify Character_Prof_Langs.[0].tool)}}
-         {{Character_Scores.[0].wis}}
+          Tools: 
+          {{#each Character_Prof_Langs.[0].tool as |tools|}}
+         {{tools}}
+         {{/each}}
+
+         Armor: 
+        {{#each Character_Prof_Langs.[0].armor as |armor|}}
+         {{armor}}
+         {{/each}}
+
+         Weapons: 
+         {{#each Character_Prof_Langs.[0].weapon as |weapons|}}
+         {{weapons}}
+         {{/each}}
+
+         Languages:
+         {{#each Character_Prof_Langs.[0].languages as |languages|}}
+         {{languages}}
+         {{/each}} 
+         
          </textarea>
       </div>
     </section>
@@ -106,7 +119,7 @@
             </div>
             <div class="remaining">
               <label for="remaininghd">Hit Dice</label>
-              <input type="text" value="{{remaininghd}}" name="remaininghd" />
+              <input type="text" value="{{hitdice}}" name="remaininghd" />
             </div>
           </div>
         </div>
@@ -219,7 +232,11 @@
               </li>
             </ul>
           </div>
-          <textarea placeholder="Equipment list here">{{equipmentlist}}</textarea>
+          <textarea placeholder="Equipment list here">
+            {{#each Character_Equipments}}
+            {{this.name}}
+            {{/each}}
+            </textarea>
         </div>
       </section>
     </section>
@@ -246,11 +263,7 @@
       <section class="features">
         <div>
           <label for="features">Features & Traits</label>
-<<<<<<< HEAD
-          <textarea name="features">{{features}}</textarea>
-=======
           <textarea name="features" class="char-feat">{{features}}</textarea>
->>>>>>> origin
         </div>
       </section>
     </section>
@@ -262,8 +275,4 @@
 <script src="./js/logout.js"></script>
 {{/if}}
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
 <script src="../js/character-sheet.js"></script>
-
-<script src="../public/js/character-creator.js"></script>
-
