preparing for main

--- a/views/character-creator.handlebars
+++ b/views/character-creator.handlebars
@@ -77,6 +77,4 @@
     </form>
 </div>
 
-<script src="./js/character-creator.js"></script>
-
-{{!-- //Delete this --}}
+<script src="../js/character-creator.js"></script>
