--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -94,8 +94,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="/js/search.js"></script>
-    <script src="./js/character-creator.js"></script>
+    <script src="../js/character-creator.js"></script>
   </body>
 </html>
-
-{{! //Delete this }}
