--- a/public/css/style.css
+++ b/public/css/style.css
@@ -53,6 +53,7 @@ body {
 #btn-signup {
   margin-left: 15px;
 }
+
 a,
 #logout,
 .username {
@@ -61,14 +62,18 @@ a,
 
 #header-welcome-container {
   text-align: center;
+  font-family: "MedievalSharp";
+}
+
+
+#header-welcome-container {
+  text-align: center;
 
   font-family: 'MedievalSharp'
   
   }
-/* create char and char sheet buttons on homepage*/
-span button {
-  margin-top: 200px;
-}
+
+
 /* CHARACTER CREATOR  */
 
 .character-creator select {
@@ -96,12 +101,6 @@ span button {
 
 #character-form {
   display: inline-block;
-}
-
-#welcome-screen-words{
- margin-top: 150px;
- max-width: 80%;
- max-height:80;
 }
 
 /* profile page style */
