trying to mix main

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,6 +24,9 @@
        <li class="nav-item">
         <a class="nav-link text-white"class="nav-link text-white btn btn-link" id="logout" href="/logout">Logout</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link text-white" href="/profile">Profile</a>
+      </li>
     {{else}}
       <li class="nav-item">
         <a class="nav-link text-white" href="/login">Login</a>
